@@ -4,7 +4,7 @@ Title: Analyze Illumina's 450k methylation arrays
 Description: Tools for analyzing and visualizing Illumina's 450k array data.
 Authors@R: c(person(c("Kasper", "Daniel"), "Hansen", role = c("cre", "aut"),
                     email = "kasperdanielhansen@gmail.com"),
-             person("Martin", "Ayree", role = "aut"),
+             person("Martin", "Aryee", role = "aut"),
              person(c("Rafael", "A."), "Irizarry", role = "aut"),
 	     person(c("Andrew", "E."), "Jaffe", role = "ctb"),
 	     person("Jovana", "Maksimovic", role = "ctb"),
